--- a/app_public/templates/about/about.html
+++ b/app_public/templates/about/about.html
@@ -1,30 +1,20 @@
 {% extends "app_base.html" %}
 {% load staticfiles %}
-
 {% block title %}
 - About Us
 {% endblock %}
-
 {% block content %}
-
-<div class="breadcumb-area">
-
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">NYC CONSTRUCTION SAFETY TRAINING - About Us</li>
-        </ol>
-    </nav>
-</div>
-
-<div class="regular-page-area section-padding-50">
+<div class="home-courses">
     <div class="container">
+        <div class="row mb-4">
+            <div class="col text-center">
+                <h3>About Us</h3>
+            </div>
+        </div>
         <div class="row">
             <div class="col-12">
                 <div class="page-content">
-
                     <h3> Mission Statement </h3>
-
                     <p>
                         NYC Construction Safety Training School aims to offer quality training that is relevant and
                         useful for the construction industry and other labor industries. These efforts include offering
@@ -33,62 +23,49 @@
                         annual reviews of training materials for accuracy and relevance, and development of quality
                         staff and instructors.
                     </p>
-
                     <p><strong>NYC Construction Safety Training Mission Statement</strong></p>
-
-                  <p>
-                    NYC Construction Training, LLC is an educational organization dedicated to supporting construction
-                    laborer education and career advancement through delivery of quality training that is useful and
-                    relevant for today’s labor industries.</p>
-
+                    <p>
+                        NYC Construction Training, LLC is an educational organization dedicated to supporting
+                        construction
+                        laborer education and career advancement through delivery of quality training that is useful and
+                        relevant for today’s labor industries.</p>
                     <p><strong>
                             NYC Construction Safety Training Vision
                         </strong></p>
-
                     <p>
                         NYC Construction Training, LLC will ensure that ongoing trainings will become available to meet
                         the changing needs of New York City’s changing labor laws as well as laborer needs and legal
                         training requirements.
                     </p>
-
                     <p><strong>
                             NYC Construction Safety Training Values
                         </strong></p>
-
                     <p> <small>
-                        <strong>
-                            Quality & Relevancy:
-                        </strong>
-                         </small>
-                         We understand that quality training is vital for successful learning outcomes and we
+                            <strong>
+                                Quality & Relevancy:
+                            </strong>
+                        </small>
+                        We understand that quality training is vital for successful learning outcomes and we
                         are dedicated to ensuring that our training materials are up to date in terms of information and
                         delivery.
                     </p>
-
-                    <p> 
-                    <small>
-                        <strong>
-                            Workforce Excellence:
-                        </strong>
-                         </small>
-                         We strive to ensure that participants who are trained through our program are enriched
+                    <p>
+                        <small>
+                            <strong>
+                                Workforce Excellence:
+                            </strong>
+                        </small>
+                        We strive to ensure that participants who are trained through our program are enriched
                         with useful knowledge and learn valuable skills that are applicable to their current site of
                         employment and/or career advancement.
                     </p>
-
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
 {% endblock %}
-
 {% block scripts %}
-
-
-
 <script>
     $(document).ready(function () {
 
