--- a/app_public/templates/legal/legal.html
+++ b/app_public/templates/legal/legal.html
@@ -1,30 +1,20 @@
 {% extends "app_base.html" %}
 {% load staticfiles %}
-
 {% block title %}
 - Legal
 {% endblock %}
-
 {% block content %}
-
-<div class="breadcumb-area">
-
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">NYC CONSTRUCTION SAFETY TRAINING - Legal</li>
-        </ol>
-    </nav>
-</div>
-
-<div class="regular-page-area section-padding-50">
+<div class="home-courses">
+    <div class="row mb-4">
+        <div class="col text-center">
+            <h3>Legal</h3>
+        </div>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="page-content">
-
+                <div class="page-content mb-4">
                     <div class="accordion" id="accordionExample">
-
                         <div class="card">
                             <div class="card-header bg-secondary p-1 text-white" id="headingOne">
                                 <h2 class="mb-0">
@@ -34,7 +24,6 @@
                                     </button>
                                 </h2>
                             </div>
-
                             <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                                 data-parent="#accordionExample">
                                 <div class="card-body">
@@ -50,9 +39,7 @@
                                 </div>
                             </div>
                         </div>
-
                         <!-- END headingOne -->
-
                         <div class="card">
                             <div class="card-header bg-secondary p-1 text-white" id="headingTwo">
                                 <h2 class="mb-0">
@@ -79,13 +66,10 @@
                                         material. NYCCST holds no financial obligation to any other 3rd party
                                         organization for the development, use, and distribution of learning materials.
                                     </p>
-
                                 </div>
                             </div>
                         </div>
-
                         <!-- END headingTwo -->
-
                         <div class="card">
                             <div class="card-header bg-secondary p-1 text-white" id="headingThree">
                                 <h2 class="mb-0">
@@ -99,7 +83,6 @@
                             <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
                                 data-parent="#accordionExample">
                                 <div class="card-body">
-
                                     <p>
                                         NYC Construction Safety Training, LLC does not tolerate discrimination, nor
                                         tolerate
@@ -109,15 +92,10 @@
                                         status,
                                         socioeconomic status, marital status, pregnancy, and/or sexual orientation.
                                     </p>
-
-
-
                                 </div>
                             </div>
                         </div>
-
                         <!-- END headingThree -->
-
                         <div class="card">
                             <div class="card-header bg-secondary p-1 text-white" id="heading4">
                                 <h2 class="mb-0">
@@ -134,9 +112,7 @@
                                 </div>
                             </div>
                         </div>
-
                         <!-- END heading4 -->
-
                         <div class="card">
                             <div class="card-header bg-secondary p-1 text-white" id="heading5">
                                 <h2 class="mb-0">
@@ -173,9 +149,7 @@
                                 </div>
                             </div>
                         </div>
-
                         <!-- END heading5 -->
-
                         <div class="card">
                             <div class="card-header bg-secondary p-1 text-white" id="heading6">
                                 <h2 class="mb-0">
@@ -192,9 +166,7 @@
                                 </div>
                             </div>
                         </div>
-
                         <!-- END heading6 -->
-
                         <div class="card">
                             <div class="card-header bg-secondary p-1 text-white" id="heading7">
                                 <h2 class="mb-0">
@@ -208,57 +180,44 @@
                                 data-parent="#accordionExample">
                                 <div class="card-body">
                                     In order to receive a full refund a participant must follow the below guidelines.
-
                                     To receive a full refund please send an email to <a class="text-info"
                                         href="mailto:Arperalta@Yahoo.com">Arperalta@Yahoo.com</a> no less than 5
                                     business days prior to the start of a scheduled learning event.
-
                                     The email must include participant’s full name and the course the participant
                                     desires to cancel. If a cancellation request email is not received earlier than 5
                                     days prior to the start of the scheduled learning event NYCCST holds the right to
                                     refuse the refund.
-
                                     Self-Paced courses are not eligible for refund.
-
                                     NYCCST will not issue a refund for courses attended where the participant failed to
                                     complete or pass the course test or other form of final assessment.
-
                                     NYCCST does not issue refunds for courses missed due to disciplinary action.
-
                                     NYCCST does not issue partial refunds. No refunds are issued to participants who
                                     failed to withdraw or reschedule a course or missed part or all of a scheduled
                                     learning event. For course live sessions, all participants are expected to be
                                     present for the entirety of the live session. If a participant must cancel or
                                     reschedule a course that includes live sessions please send an email to
-                                    <a class="text-info" href="mailto:Arperalta@Yahoo.com">Arperalta@Yahoo.com</a>. Participants have the right to reschedule a course up to 5 days
+                                    <a class="text-info" href="mailto:Arperalta@Yahoo.com">Arperalta@Yahoo.com</a>.
+                                    Participants have the right to reschedule a course up to 5 days
                                     after the course start date.
                                     Attachments area
-
                                 </div>
                             </div>
                         </div>
-
                         <!-- END heading7 -->
-
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
 {% endblock %}
-
 {% block scripts %}
-
 <style>
     .accordion .btn-link:hover {
         text-decoration: none;
         color: #d16112 !important;
     }
 </style>
-
 <script>
     $(document).ready(function () {
 
