--- a/app_public/templates/sst/verify.html
+++ b/app_public/templates/sst/verify.html
@@ -1,92 +1,59 @@
 {% extends "app_base.html" %}
 {% load staticfiles %}
-
 {% block title %}
 - SST Card Verification
 {% endblock %}
-
 {% block content %}
-
-<div class="breadcumb-area">
-
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="/">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page"> Card Verification</li>
-        </ol>
-    </nav>
-</div>
-
-<div class="regular-page-area section-padding-50">
-
+<div class="home-courses">
     <div class="container">
+        <div class="row mb-4">
+            <div class="col text-center">
+                <h3>Card Verification</h3>
+            </div>
+        </div>
         <div class="row">
             <div class="col-12">
                 <div class="page-content">
-
-                    <h3>  Card Verification </h3>
-
-                    <p>
-                         Test
-                       
-                    </p>
-
-
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="card my-4">
                                 <div class="card-body">
-
                                     <form id="fm">
-
                                         <div class="row">
-
                                             <div class="col">
                                                 <div class="clearfix">
                                                     <label for="exampleInputEmail1">Card Number</label>
                                                     <input type="text" class="form-control" id="txtCardNumber"
                                                         name="card_number" />
                                                 </div>
-
                                             </div>
                                             <div class="col">
                                                 <div class="mt-4 p-1">
-                                                    <button type="button" class="btn btn-primary" id="btnVerify">Submit
+                                                    <button type="button" class="btn btn-orange" id="btnVerify">Submit
                                                         Verify</button>
                                                     <button type="button" class="btn btn-secondary"
                                                         id="btnClear">Clear</button>
                                                 </div>
-
                                             </div>
-
                                         </div>
-
-
-
-
-
                                         <div class="text-right">
                                             <div class="spinner-border text-primary d-none" role="status">
                                                 <span class="sr-only">Loading...</span>
                                             </div>
-
                                         </div>
                                     </form>
                                 </div>
                             </div>
                         </div>
                     </div>
-
                     <div class="card" id="sstDetails"></div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
 {% verbatim %}
 <script type="text/x-handlebars-template" id='detailItemTemplate'>
-
     <div class="row">
 
     <div class="col-md-4">
@@ -206,9 +173,7 @@
 
 </script>
 {% endverbatim %}
-
 {% endblock %}
-
 {% block scripts %}
 <script>
     (function ($) {
@@ -282,7 +247,7 @@
                     e.stopPropagation();
                     $("#txtCardNumber").val(null);
                     $("#fm .alert").remove();
-                     $("#sstDetails").empty();
+                    $("#sstDetails").empty();
                 });
 
 
