--- a/students/templates/registration/logged_out.html
+++ b/students/templates/registration/logged_out.html
@@ -2,9 +2,24 @@
 
 {% block title %}Logged out{% endblock %}
 
+
+
 {% block content %}
-    <h1>Logged out</h1>
-    <div class="module">
+
+<section class="home-courses">
+    <div class="container">
+        <div class="row mb-4">
+            <div class="col text-center">
+                <h3>Logged out</h3>
+            </div>
+        </div>
+        <div class="row">
+        <div class="col">
         <p>You have been successfully logged out. You can <a href="{% url "login" %}">log-in again</a>.</p>
+        </div>
+        </div>
     </div>
+</section>
+
+   
 {% endblock %}
