--- a/courses/templates/app_base.html
+++ b/courses/templates/app_base.html
@@ -541,16 +541,31 @@
     <div class="offcanvas-menu-wrapper">
         <div class="offcanvas__option">
             <div class="offcanvas__links">
-                <a href="#">Sign in</a>
-                <a href="#">Register</a>
+                {% if request.user.is_authenticated  %}
+                {%else%}
+                <a href="{% url 'login' %}">Sign in</a>
+                <a href="{% url 'student_registration' %}">Register</a>
+                {%endif%}
             </div>
+            {% if request.user.is_authenticated  %}
             <div class="offcanvas__top__hover">
-                <span>Welcome <i class="arrow_carrot-down"></i></span>
+                <span>Welcome, {{ request.user }} <i class="arrow_carrot-down"></i></span>
                 <ul>
-                    <li><a href="/dasboard" class="text-white">Dashboard</a></li>
-                    <li><a href="/logout" class="text-white">Logout</a></li>
+                    <li>
+                        {% if request.user.is_teacher == True %}
+                        <a href="{% url 'teacher_dashboard' %}" class="text-white">Teacher Dashboard</a>
+                        {% endif %}
+                        {% if request.user.is_student == True %}
+                        <a href="{% url  'student_course_list' %}" class="text-white">Student Dashboard</a>
+                        {% endif %}
+                        {% if request.user.is_superuser == True %}
+                        <a href="{% url  'admin_dashboard' %}" class="text-white">Admin Dashboard</a>
+                        {% endif %}
+                    </li>
+                    <li><a href="{% url 'logout' %}"  class="text-white">Sign Out</a></li>
                 </ul>
             </div>
+            {%endif%}
         </div>
         <div class="offcanvas__nav__option">
             <a href="#" class="text-dark"><i class="icon_cart"></i> <span>(0)</span></a>
